@@ -2,16 +2,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<groupId>org.keycloak.social</groupId>
 	<artifactId>keycloak-service-social-lark</artifactId>
-	<version>1.0.0</version>
+	<version>0.1.0</version>
+
 	<name>Keycloak Services Social Lark</name>
 	<description>Keycloak social identity provider for Lark(feishu)</description>
+	<repositories>
+		<repository>
+			<id>Central Repository</id>
+			<url>https://repo1.maven.org/maven2/</url>
+		</repository>
+	</repositories>
 	<properties>
-		<java.version>1.8</java.version>
-		<keycloak.version>8.0.1</keycloak.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>11</maven.compiler.source>
+		<keycloak.version>23.0.6</keycloak.version>
+		<maven.compiler.target>11</maven.compiler.target>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>jakarta.ws.rs</groupId>
+			<artifactId>jakarta.ws.rs-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.keycloak</groupId>
 			<artifactId>keycloak-server-spi-private</artifactId>
@@ -24,16 +40,17 @@
 			<artifactId>keycloak-services</artifactId>
 			<version>${keycloak.version}</version>
 			<scope>provided</scope>
-			<exclusions>
-				<exclusion>
-					<artifactId>openshift-restclient-java</artifactId>
-					<groupId>com.openshift</groupId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.keycloak</groupId>
 			<artifactId>keycloak-server-spi</artifactId>
+			<version>${keycloak.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.keycloak</groupId>
+			<artifactId>keycloak-model-jpa</artifactId>
 			<version>${keycloak.version}</version>
 			<scope>provided</scope>
 		</dependency>
@@ -44,12 +61,26 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.11.0</version>
 				<configuration>
-					<source>8</source>
-					<target>8</target>
+					<encoding>UTF-8</encoding>
+					<source>15</source>
+					<target>15</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>
+						--add-opens=java.base/java.lang=ALL-UNNAMED
+						--add-opens java.base/java.security=ALL-UNNAMED
+						--add-opens java.base/java.util=ALL-UNNAMED
+						--add-opens java.base/java.net=ALL-UNNAMED
+					</argLine>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
-
 </project>
